test/variables/sungeun/refvar-no-init-with-def.good
refvar-no-init-with-def.chpl:1: error: References must be initialized
